[package]
name = "remember-this"
version = "0.1.0"
authors = ["David Teller <davidt@element.io>"]
edition = "2018"
description = "A simple mechanism for caching data to both memory and disk. Uses `tokio`."
license = "Apache-2.0"
readme = "README.md"
keywords = ["cache", "disk", "lru", "tokio"]
categories = ["caching"]
repository = "https://github.com/matrix-org/disk-cache-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
flexbuffers = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["rc"] }
sled = "0.34"
tokio = { version = "1.15", features = ["full"] }
typed-builder = "0.7"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
env_logger = "0.8"
skeptic = "0.13"
